# nescript

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compiler-bugs.md  intro.md  performance.md  plan.md  spec.md
.github/workflows/: ci.yml  mesen.yml
benches/: compile.rs
docs/: architecture.md  decomp-plan.md  decompiler-guide.md  future-work.md  language-guide.md  nes-reference.md
examples/: README.md  arrays_and_functions.ne  arrays_and_functions.nes  audio_demo.ne  audio_demo.nes  auto_chr_background.ne  auto_chr_background.nes  auto_sprite_flicker.ne  auto_sprite_flicker.nes  axrom_simple.ne  axrom_simple.nes  bitwise_ops.ne  bitwise_ops.nes  bouncing_ball.ne  bouncing_ball.nes  cnrom_simple.ne  cnrom_simple.nes  coin_cavern.ne  coin_cavern.nes  comparisons.ne  comparisons.nes  edge_input_demo.ne  edge_input_demo.nes  fade_demo.ne  fade_demo.nes  feature_canary.ne  feature_canary.nes  friendly_assets.ne  friendly_assets.nes  function_chain.ne  function_chain.nes  gnrom_simple.ne  gnrom_simple.nes  hello_sprite.ne  hello_sprite.nes  hud_demo.ne  hud_demo.nes  i16_demo.ne  i16_demo.nes  inline_asm_demo.ne  (+64 more)
examples/jumpjet/: PLAN.md  assets.ne  audio.ne  constants.ne  gameover_state.ne  play_state.ne  render.ne  state.ne  title_state.ne
examples/pong/: PLAN.md  assets.ne  audio.ne  ball.ne  constants.ne  input.ne  play_state.ne  powerup.ne  render.ne  rng.ne  state.ne  title_state.ne  victory_state.ne
examples/sha256/: assets.ne  background.ne  computing_state.ne  constants.ne  keyboard.ne  (+5 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_lexer.rs  fuzz_parser.rs
scripts/: gen_platformer_tiles.rs  pre-commit
src/: lib.rs  main.rs  pipeline.rs
tests/: decompiler_roundtrip.rs  integration_test.rs
(+82 files in other folders)
